fixed white space at footer and contact section

--- a/contact-style.css
+++ b/contact-style.css
@@ -145,6 +145,7 @@
   position: absolute;
   left: 0rem;
   top: 60.75rem;
+  bottom: 0rem;
   overflow: hidden;
 }
 
